--- a/11.md
+++ b/11.md
@@ -1,29 +1,2 @@
-有几种方法可以将带有格式的Markdown内容复制到GitHub上，我来为你详细介绍：
-
-方法一：直接复制粘贴（最简单）
-适用于大多数情况
-在GitHub上：
-
-进入你的仓库
-
-点击"Add file" → "Create new file"
-
-将文件名设为 README.md 或其他以 .md 结尾的文件名
-
-从我的回复复制：
-
-全选我的回复内容（从"## Day 19"开始到最后）
-
-复制（Ctrl+C 或 Command+C）
-
-在GitHub编辑器粘贴：
-
-直接粘贴到GitHub的编辑框中
-
-GitHub会自动识别Markdown格式
-
-提交：
-
-添加提交信息
-
-点击"Commit new file"
+# 如果使用curl（需要知道消息ID，比较麻烦）
+# 或者直接：右键点击回复 → "显示原始内容"
